Updated pacakge file

--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "start": "next start"
+    "clean": "rm -rf .next node_modules package-lock.json",
+    "clean:install": "npm run clean && npm install --legacy-peer-deps",
+    "clean:build": "npm run clean && npm run build && npm run dev",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
